NAS-127435: Fix layout width on mobile screens (#9712)

--- a/src/app/modules/ix-forms/components/ix-slide-in/components/ix-slide-in2/ix-slide-in2.component.scss
+++ b/src/app/modules/ix-forms/components/ix-slide-in/components/ix-slide-in2/ix-slide-in2.component.scss
@@ -76,6 +76,7 @@
 @media #{$media-lt-sm} {
   .ix-slide-in2-form {
     min-width: 100%;
+    right: -100%;
     width: 100%;
   }
 }
