--- a/src/app/modules/ix-forms/components/ix-slide-in/ix-slide-in.component.scss
+++ b/src/app/modules/ix-forms/components/ix-slide-in/ix-slide-in.component.scss
@@ -73,6 +73,7 @@
 @media #{$media-lt-sm} {
   .ix-slide-in-form {
     min-width: 100%;
+    right: -100%;
     width: 100%;
   }
 }
